Fix layout bugs caused by CSS for new icons

--- a/budgeter-ui/src/pages/home/components/Category/Category.module.css
+++ b/budgeter-ui/src/pages/home/components/Category/Category.module.css
@@ -6,6 +6,14 @@
 	margin-bottom: 32px;
 }
 
+.categoryTableFixed {
+	table-layout: fixed;
+}
+
+.categoryTableAuto {
+	table-layout: auto;
+}
+
 .categoryTable td,
 .categoryTable th {
 	padding: 4px 6px;
